--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -4,8 +4,8 @@
 		<center><h2>Thêm mẫu dữ liệu động vật</h2></center>
 		<div class=" map-detail" style="margin-top: 50px;">
 			<table>
-				<!-- <tr ng-if="maDeTai == 'BSTMV.03/15-17'"> -->
-				<tr ng-if="maDeTai == 'DT-001'">
+				<tr ng-if="maDeTai == 'BSTMV.15/2016-2021'">
+				<!-- <tr ng-if="maDeTai == 'DT-001'"> -->
 					<td><h4>Nhập từ file Excel:</h4></td>
 					<td> 
 						<js-xls onread="read" onerror="error"></js-xls>
